--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="База палитр">
-    <title>Palette Picker</title>
+    <meta name="description" content="Наш сайт предлагает широкий выбор готовых цветовых палитр для вашего проекта. Используйте функцию создания собственной палитры или воспользуйтесь поиском по тегам, чтобы найти нужные вам цветовые схемы. Колорпикер позволит вам выбрать и сохранить нужные цвета для вашего дизайна.">
+    <meta name="keywords" content="готовые цветовые палитры, поиск по тегам, колорпикер, цветовые схемы, дизайн, выбор цветов, сохранение цветов, создание палитры, генерация палитры" />
+    <title>База готовых цветовых палитр для вашего дизайна | Колорпикер и поиск по тегам</title>
   </head>
   <body>
     <div id="root"></div>
