--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/logos/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Наш сайт предлагает широкий выбор готовых цветовых палитр для вашего проекта. Используйте функцию создания собственной палитры или воспользуйтесь поиском по тегам, чтобы найти нужные вам цветовые схемы. Колорпикер позволит вам выбрать и сохранить нужные цвета для вашего дизайна.">
